# Goproverlay

./: Makefile  Overlayed.temp-audio.m4a  README.md  Untitled-1.py  log.txt  profile.speedscope.json  pyproject.toml  satbike.fit
goproverlay/: cli.py
goproverlay/core/: datatypes.py  fit_loader.py  gpx_loader.py  interpolation.py  time_sync.py  units.py  video_meta.py
goproverlay/overlay/: renderer.py
goproverlay/overlay/widgets/: base.py  elevation_plot.py  gauge.py  metric.py  track.py
goproverlay/utils/: logging.py
scripts/: harness_fit.py  harness_solid.py
